# switchboard

./: .gitignore  Cargo.toml
amount-btc/: Cargo.toml
amount-btc/src/: lib.rs
main-rpc/: Cargo.toml
main-rpc/src/: lib.rs
mainchain-rpc/: Cargo.toml
src/: api.rs  client.rs  config.rs  launcher.rs  lib.rs  server.rs  zcash_client.rs
switchboard/: Cargo.toml
switchboard-api/: Cargo.toml
switchboard-api/src/: lib.rs
switchboard-cli/: Cargo.toml
switchboard-cli/src/: main.rs
switchboard-config/: Cargo.toml
switchboard-config/src/: lib.rs
switchboard-gui/: package.json  pnpm-lock.yaml
switchboard-gui/src/: app.css
switchboard-gui/src-tauri/: Cargo.toml
switchboard-gui/src-tauri/src/: main.rs
switchboard-gui/src/lib/: Amount.svelte  Balances.svelte  BlockCounts.svelte  Greet.svelte  Main.svelte  Tab.svelte  TabList.svelte  TabPanel.svelte  Tabs.svelte
switchboard-gui/src/routes/: +page.svelte
switchboard-launcher/: Cargo.toml
switchboard-launcher/src/: lib.rs
switchboard-rpc/: Cargo.toml
switchboard-rpc/src/: lib.rs
switchboard-server/: Cargo.toml
switchboard-server/src/: main.rs
switchboard/src/: api.rs  config.rs  ethereum_client.rs  launcher.rs  lib.rs  main_client.rs  server.rs  zcash_client.rs
switchboardd/: Cargo.toml  config.toml
switchboardd/src/: main.rs  server.rs
zcash-rpc/: Cargo.toml
zcash-rpc/src/: lib.rs
