[package]
name = "switchboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.147", features = ["derive"] }
serde_derive = "1.0.147"
anyhow = "1.0.66"
base64 = "0.13.1"
http = "0.2.8"
thiserror = "1.0.31"
sha256 = "1.1.1"
bytes = "1.3.0"
flate2 = "1.0.25"
tar = "0.4.38"
hex = "0.4.3"
ureq-jsonrpc = { git = "https://github.com/nchashch/ureq-jsonrpc" }
dirs = "4.0.0"
ureq = "2.6.2"
