[package]
name = "switchboard-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "2.4", features = ["json"] }
thiserror = "1.0.31"
base64 = "0.13"
bitcoin = "0.29.1"
serde_derive = "1.0"
serde = "1.0"
rand = "0.8.5"
jsonrpsee = { version = "0.15.1", features = ["client", "macros"] }
main-rpc = { path = "../main-rpc" }
zcash-rpc = { path = "../zcash-rpc" }
amount-btc = { path = "../amount-btc" }
switchboard-config = { path = "../switchboard-config" }
sha256 = "1.1.1"
anyhow = "1.0.66"
nix = "0.25.0"
ctrlc = "3.2.3"
clap = { version = "4.0.18", features = ["derive"] }
