[package]
name = "switchboard-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.31"
base64 = "0.13"
bitcoin = "0.29.1"
serde_derive = "1.0"
jsonrpsee = { version = "0.15.1", features = ["client", "macros"] }
main-rpc = { path = "../main-rpc" }
zcash-rpc = { path = "../zcash-rpc" }
amount-btc = { path = "../amount-btc" }
switchboard-config = { path = "../switchboard-config" }
sha256 = "1.1.1"
anyhow = "1.0.66"
serde_json = "1.0.87"
clap = "4.0.18"
