[package]
name = "switchboard-rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpsee = { version = "0.15.1", features = ["server", "client", "macros"] }
serde = { version = "1.0.147", features = ["derive"] }
