[package]
name = "switchboard-rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
switchboard-api = { path = "../switchboard-api" }
jsonrpsee = { version = "0.15.1", features = ["server", "client", "macros"] }
serde = { version = "1.0.147", features = ["derive"] }
bitcoin = "0.29.2"
serde_json = "1.0.87"
