[package]
name = "switchboard-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.29.1"
jsonrpsee = { version = "0.15.1", features = ["server", "macros"] }
switchboard-launcher = { path = "../switchboard-launcher" }
clap = { version = "4.0.1", features = ["derive"] }
anyhow = "1.0.65"
confy = "0.5.0"
tokio = { version = "1.21.2", features = ["rt-multi-thread"] }
