[package]
name = "switchboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpsee = { version = "0.15.1", features = ["server", "client", "macros"] }
serde = { version = "1.0.147", features = ["derive"] }
bitcoin = { version = "0.29.2", features = ["serde"] }
serde_json = "1.0.87"
anyhow = "1.0.66"
tokio = { version = "1.21.2", features = ["process"] }
base64 = "0.13.1"
http = "0.2.8"
serde_derive = "1.0.147"
thiserror = "1.0.31"
sha256 = "1.1.1"
clap = { version = "4.0.18", features = ["derive"] }
reqwest = "0.11.14"
bytes = "1.3.0"
flate2 = "1.0.25"
tar = "0.4.38"
web3 = "0.18.0"

[dev-dependencies]
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros"] }
