[package]
name = "switchboardd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
switchboard-launcher = { path = "../switchboard-launcher" }
switchboard-config = { path = "../switchboard-config" }
clap = { version = "4.0.1", features = ["derive"] }
anyhow = "1.0.65"
confy = "0.5.0"
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros"] }
nix = "0.25.0"
ctrlc = "3.2.3"
